--- a/Tugas_Week_5.ipynb
+++ b/Tugas_Week_5.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOHeaDrhjA6K+iSWRxIpoXl",
+      "authorship_tag": "ABX9TyM1dUCrfHo+3zfGVYkHQV3x",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -184,9 +184,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6hL9UlXBdqbn",
-        "outputId": "e9388763-c2ee-42b0-d542-a6a4b01452b1"
+        "outputId": "38875a05-fcb1-426b-f9a3-85db55863f80"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -258,12 +258,11 @@
         "# Buktikan angka yang paling besar\n",
         "if angka1 > angka2 and angka1 > angka3:\n",
         "  print(\"Angka terbesar adalah:\", angka1)\n",
-        "\n",
-        "elif angka2 > angka1 and angka2 > angka3:\n",
-        "  print(\"Angka terbesar adalah:\", angka2)\n",
-        "\n",
         "else:\n",
-        "  print(\"Angka terbesar adalah:\", angka3)\n",
+        "    if angka2 > angka1 and angka2 > angka3:\n",
+        "     print(\"Angka terbesar adalah:\", angka2)\n",
+        "    else:\n",
+        "      print(\"Angka terbesar adalah:\", angka3)\n",
         "\n"
       ],
       "metadata": {
@@ -271,18 +270,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "AYBIZhREczu3",
-        "outputId": "43199051-0c42-4fa2-8597-dc3e666bea67"
+        "outputId": "46eb58cb-e1c0-400d-cabf-08529d0cdb0b"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            " angka pertama: 5\n",
-            " angka kedua: 12\n",
-            " angka ketiga: 15\n",
-            "Angka terbesar adalah: 15\n"
+            " angka pertama: 15\n",
+            " angka kedua: 30\n",
+            " angka ketiga: 23\n",
+            "Angka terbesar adalah: 30\n"
           ]
         }
       ]
@@ -313,10 +312,11 @@
         "# Total belanja\n",
         "if total_belanja > 100000:\n",
         "  diskon = 3\n",
-        "elif total_belanja > 200000:\n",
-        "  diskon = 4\n",
         "else:\n",
-        "  diskon = 0\n",
+        "    if total_belanja > 200000:\n",
+        "      diskon = 4\n",
+        "    else:\n",
+        "       diskon = 0\n",
         "\n",
         "# Member\n",
         "if member == \"ya\":\n",
@@ -342,9 +342,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "X5ecfsHLhmF2",
-        "outputId": "c60ef066-d7f5-4f85-8ede-d39c5ed1511b"
+        "outputId": "82da41a7-0187-4051-df8f-691829fa4fce"
       },
-      "execution_count": 6,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -388,32 +388,34 @@
         "\n",
         "if username == \"\":\n",
         "  print(\"Username tidak boleh kosong\")\n",
-        "elif \"@\" not in email:\n",
-        "  print(\"Alamat email tidak valid\")\n",
-        "elif len(password) <= 8:\n",
-        "  print(\"Password harus lebih dari 8 karakter\")\n",
         "else:\n",
-        "    print(\"User baru berhasil dibuat\")\n",
-        "    print(\"Username:\", username)\n",
-        "    print(\"Email:\", email)\n",
-        "    print(\"Password:\", password)\n"
+        "  if \"@\" not in email:\n",
+        "   print(\"Alamat email tidak valid\")\n",
+        "  else:\n",
+        "      if len(password) <= 8:\n",
+        "        print(\"Password harus lebih dari 8 karakter\")\n",
+        "      else:\n",
+        "        print(\"User baru berhasil dibuat\")\n",
+        "        print(\"Username:\", username)\n",
+        "        print(\"Email:\", email)\n",
+        "        print(\"Password:\", password)"
       ],
       "metadata": {
-        "id": "_-fflA2P_r38",
+        "id": "DrtUUqQ37VlI",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b7a3a360-9193-4ef5-a68b-991fc7fbd978"
+        "outputId": "a7793a4e-bbc8-49ad-c4f3-5a7e3ee8fd43"
       },
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Username: nofiya\n",
-            "Email: nofiyamillatina@gmail.com\n",
-            "Password: nofiya\n",
+            "Email: nofiya@gmail.com\n",
+            "Password: akusuka\n",
             "Password harus lebih dari 8 karakter\n"
           ]
         }
@@ -429,36 +431,38 @@
         "\n",
         "if username == \"\":\n",
         "  print(\"Username tidak boleh kosong\")\n",
-        "elif \"@\" not in email:\n",
-        "  print(\"Alamat email tidak valid\")\n",
-        "elif len(password) <= 8:\n",
-        "  print(\"Password harus lebih dari 8 karakter\")\n",
         "else:\n",
-        "    print(\"User baru berhasil dibuat\")\n",
-        "    print(\"Username:\", username)\n",
-        "    print(\"Email:\", email)\n",
-        "    print(\"Password:\", password)\n"
+        "  if \"@\" not in email:\n",
+        "   print(\"Alamat email tidak valid\")\n",
+        "  else:\n",
+        "      if len(password) <= 8:\n",
+        "        print(\"Password harus lebih dari 8 karakter\")\n",
+        "      else:\n",
+        "        print(\"User baru berhasil dibuat\")\n",
+        "        print(\"Username:\", username)\n",
+        "        print(\"Email:\", email)\n",
+        "        print(\"Password:\", password)"
       ],
       "metadata": {
-        "id": "DrtUUqQ37VlI",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "cb9c1b84-95ce-4c65-f0d6-93c7a5182b78"
+        "id": "6ib0eZqXMsm6",
+        "outputId": "6a0b2d45-7df3-4408-d55e-be6b22f5fed9"
       },
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Username: nofiya\n",
+            "Username: Nofiya\n",
             "Email: nofiyamillatina@gmail.com\n",
-            "Password: pengenliatpaus\n",
+            "Password: akusukapaus\n",
             "User baru berhasil dibuat\n",
-            "Username: nofiya\n",
+            "Username: Nofiya\n",
             "Email: nofiyamillatina@gmail.com\n",
-            "Password: pengenliatpaus\n"
+            "Password: akusukapaus\n"
           ]
         }
       ]
