--- a/Tugas_Week_5.ipynb
+++ b/Tugas_Week_5.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM1dUCrfHo+3zfGVYkHQV3x",
+      "authorship_tag": "ABX9TyMq+7HY/gZ0tSN9wZQ8z+vW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -177,6 +177,7 @@
         "if tahun % 4 ==0:\n",
         "    print(\"Tahun tersebut adalah tahun kabisat\")\n",
         "else:\n",
+        "  if tahun %4 !=4:\n",
         "    print(\"Tahun tersebut bukan tahun kabisat\")"
       ],
       "metadata": {
@@ -184,16 +185,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6hL9UlXBdqbn",
-        "outputId": "38875a05-fcb1-426b-f9a3-85db55863f80"
+        "outputId": "1671a057-49d1-48f2-b188-55b96f1b0c69"
       },
-      "execution_count": 1,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            " Tahun 2024\n",
-            "Tahun tersebut adalah tahun kabisat\n"
+            " Tahun 2023\n",
+            "Tahun tersebut bukan tahun kabisat\n"
           ]
         }
       ]
@@ -208,6 +209,7 @@
         "if tahun % 4 ==0:\n",
         "    print(\"Tahun tersebut adalah tahun kabisat\")\n",
         "else:\n",
+        "  if tahun %4 !=4:\n",
         "    print(\"Tahun tersebut bukan tahun kabisat\")"
       ],
       "metadata": {
@@ -215,16 +217,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vbQeoOEsboBu",
-        "outputId": "bb033e40-089e-4a50-9883-7e8e8032e547"
+        "outputId": "67d621be-1154-4495-c574-1db590a3c37c"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            " Tahun 2019\n",
-            "Tahun tersebut bukan tahun kabisat\n"
+            " Tahun 2024\n",
+            "Tahun tersebut adalah tahun kabisat\n"
           ]
         }
       ]
